--- a/Homework/Week2/CS112_L21_KHCL_N03_Week2.ipynb
+++ b/Homework/Week2/CS112_L21_KHCL_N03_Week2.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "CS112_L21_KHCL_N03_Week2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMMFXFfXNmHDG7Yts/jk/cv",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CS112-3/Dynamic-programming/blob/main/Homework/Week2/CS112_L21_KHCL_N03_Week2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -38,7 +50,48 @@
         "  * nếu giá trị  >= y thì hoàn tất \n",
         "  * còn không thì y=y-1\n",
         "* Đánh giá độ phức tạp thuật toán:O(n)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TGN5FD7RYJz4"
+      },
+      "source": [
+        "def H_dex(n,List):\n",
+        "    Temp = [0] * (n + 1)\n",
+        "    for i in range(len(List)):\n",
+        "        List[i] = int(List[i]) % 1000007\n",
+        "        if (List[i]) >= n:\n",
+        "            Temp[n] = Temp[n] + 1\n",
+        "        else:\n",
+        "            Temp[List[i]] = Temp[List[i]] + 1\n",
+        "    del List\n",
+        "    x = 0\n",
+        "    y = len(Temp) - 1\n",
+        "    for i in reversed(Temp):\n",
+        "        x = x + i\n",
+        "        if x >= y:\n",
+        "            break\n",
+        "        y = y - 1\n",
+        "    del Temp\n",
+        "    return y\n",
         "\n",
+        "n = int(input())% 1000007\n",
+        "input_string = input()\n",
+        "List=input_string.split()\n",
+        "print(H_dex(n,List))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QgWWQ8mmYGCl"
+      },
+      "source": [
         "<h1>KHÓA SỐ</h1>\n",
         "\n",
         "* Abstraction:Cho một xâu, xuất ra một xâu lớn nhất và phải chia hết cho 3 ( có thể xóa phần tử trong xâu để có thể được chia hết cho 3)\n",
@@ -60,6 +113,41 @@
         "  * Xuất mảng\n",
         "* Đánh giá độ phức tạp thuật toán:O(n)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sedNBny8YYZa"
+      },
+      "source": [
+        "def connect(List):\n",
+        "    listToStr = ''.join([str(elem) for elem in List])\n",
+        "    return listToStr\n",
+        "def helper(s):\n",
+        "    a=int(s)\n",
+        "    List=sorted(s, reverse=True)\n",
+        "    a = a % 3\n",
+        "    if a == 0:\n",
+        "        return connect(List)\n",
+        "    else:\n",
+        "        Pop = []\n",
+        "        for i in range(len(List)-1,-1,-1):\n",
+        "            t = int(List[i])\n",
+        "            if (t % 3) == a :\n",
+        "                List.pop(i)\n",
+        "                return connect(List)\n",
+        "            elif 2 != len(Pop):\n",
+        "                if 3 - a == t % 3:\n",
+        "                    Pop.append(i)\n",
+        "        List.pop(Pop[0])\n",
+        "        List.pop(Pop[1])\n",
+        "    return connect(List)\n",
+        "\n",
+        "t=input().strip()\n",
+        "print(helper(t))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
