--- a/Homework/Week4/CS112_L21_KHCL_N03_Week4.ipynb
+++ b/Homework/Week4/CS112_L21_KHCL_N03_Week4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CS112_L21_KHCL_N03_Week4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyObE5VCa+DVQ66MVahScG84",
+      "authorship_tag": "ABX9TyO6bJwG7f5MAU1utfuY5Rp9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,7 +226,7 @@
         "  ```\n",
         "\n",
         "* Nếu flag là False thì sẽ rồi vào các trường hợp như 988\n",
-        "  * Lặp lại các bước giống như trên nhưng không cần kiểm tra Alteration > int(Temp[i] hay không\n",
+        "  * Lặp lại các bước giống như trên nhưng không cần kiểm tra Alteration > int(Temp[i] hay không, nếu rơi vào các trường hợp là số lớn nhất và đã chiah hết cho 3 như 9 hay 99 thì chỉ cần cho số cuối cùng bằng 6\n",
         "\n",
         "  ```markdown\n",
         "    if flag == False:\n",
@@ -237,7 +237,10 @@
         "          Ind[0]=current % 3-Over\n",
         "      if Ind[0]==0:\n",
         "          Ind[0]=3\n",
-        "      Temp[len(Temp)-1] = Ind[Ind[0]]\n",
+        "      if Temp[len(Temp)-1] == Ind[Ind[0]]\n",
+        "          Temp[len(Temp)-1] = 6\n",
+        "      else\n",
+        "          Temp[len(Temp)-1] = Ind[Ind[0]]\n",
         "    ```\n",
         "* Nối dang sách lại với nhau thành một chữ số \n",
         "* Trả về chữ số đó\n",
@@ -290,7 +293,10 @@
         "            Ind[0]=current % 3-Over\n",
         "        if Ind[0]==0:\n",
         "            Ind[0]=3\n",
-        "        Temp[len(Temp)-1] = Ind[Ind[0]]\n",
+        "        if Temp[len(Temp)-1] == Ind[Ind[0]]\n",
+        "            Temp[len(Temp)-1] = 6\n",
+        "        else\n",
+        "            Temp[len(Temp)-1] = Ind[Ind[0]]\n",
         "    strings = [str(integer) for integer in Temp]\n",
         "    a_string = \"\".join(strings)\n",
         "    Temp = int(a_string)\n",
