--- a/Homework/LuyệnTập_Nhóm11/CS112_KHCL_N03_Week9.ipynb
+++ b/Homework/LuyệnTập_Nhóm11/CS112_KHCL_N03_Week9.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled4.ipynb",
+      "name": "CS112_KHCL_N03_Week9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUvDUG2JdCpfOAz8XmbihF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,49 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/CS112-3/Dynamic-programming/blob/main/Homework/Week9/CS112_KHCL_N03_Week9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/CS112-3/Dynamic-programming/blob/main/Homework/Luy%E1%BB%87nT%E1%BA%ADp_Nh%C3%B3m11/CS112_KHCL_N03_Week9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wc36eWLE8imY"
+      },
+      "source": [
+        "# Abstraction\n",
+        "---\n",
+        "Tìm kiếm tuyến tính\n",
+        "\n",
+        "# Pattern Recognition\n",
+        "---\n",
+        "Quy hoạch động\n",
+        "\n",
+        "# Algorithm Design\n",
+        "---\n",
+        "xây dựng hai mảng L[] và R[], trong đó L[i] là vị trí j nhỏ nhất mà bị cây i làm đổ nếu đẩy về bên trái, tương tự với R.\n",
+        "\n",
+        "<center> $L[i]=min[i,min(L[j]) với i−h[i] < j < i] $</center>\n",
+        "\n",
+        "Để tính L[] ta duy trì một stack chứa các chỉ số tăng dần. Trước khi thêm một cây i mới vào, các cây bị nó trực tiếp làm đổ sẽ bị pop ra, đồng thời ta cập nhật L[i].\n",
+        "\n",
+        "Gọi F(i) là số cây cần phải đổ nhỏ nhất để các cây có chỉ số 1 … i đều đổ.\n",
+        "Để tính F(i) cần xét 2 trường hợp:\n",
+        "\n",
+        "* Nếu ta đẩy cây i qua trái: F(i)=min[F(j−1)+1] với L[i] ≤ j ≤ i (1)\n",
+        "*\tNếu cây i bị đẩy qua phải bởi cây j F(i)=min[F(j−1)+1] với 1≤ j ≤ i và R[j] ≥ i (2)\n",
+        "\n",
+        "\n",
+        "> Với F(i)=min[F(j−1)+1] với L[i] ≤ j ≤ i \n",
+        "\n",
+        "cập nhật 𝐹[𝐿[𝑖]−1]=min⁡[𝐹(𝑗−1)+1] với 𝐿[𝑖]≤𝑗≤𝑖\n",
+        ">với F(i)=min[F(j−1)+1] với 1≤ j ≤ i và R[j] ≥ i \n",
+        "\n",
+        "sử dụng một stack để lưu các vị trí có R[] giảm dần, đồng thời luôn duy trì sao cho giá trị ở top của stack luôn là tốt nhất. Chú ý là với 𝑗<𝑖 và 𝑅[𝑗]≥𝑖 thì 𝑅[𝑗]≥𝑅[𝑖]. Như vậy nếu tại mỗi bước ta pop các vị trí j có 𝑹[𝒋]<𝒊 ra khỏi stack, thì sẽ luôn duy trì được tính chất của stack vì lúc này đảm bảo được R[i] là nhỏ hơn các R[] đang ở trong stack, đồng thời nếu F(i−1) không tốt bằng giá trị ở đầu stack thì ta sẽ không đẩy i vào (để đảm bảo giá trị ở top luôn là tốt nhất).\n",
+        "\n",
+        "# Complexity\n",
+        "---\n",
+        "Time Conplexity :O(N)\n",
+        "\n"
       ]
     },
     {
