--- a/Thực hành/Khóa số & H-index/CS112_L21_KHCL_N03_Week2.ipynb
+++ b/Thực hành/Khóa số & H-index/CS112_L21_KHCL_N03_Week2.ipynb
@@ -6,7 +6,6 @@
       "name": "CS112_L21_KHCL_N03_Week2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMFXFfXNmHDG7Yts/jk/cv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/CS112-3/Dynamic-programming/blob/main/Homework/Week2/CS112_L21_KHCL_N03_Week2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/CS112-3/Dynamic-programming/blob/main/Th%E1%BB%B1c%20h%C3%A0nh/Kh%C3%B3a%20s%E1%BB%91%20%26%20H-index/CS112_L21_KHCL_N03_Week2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,13 +33,36 @@
         "id": "QOWpHyTJBIoi"
       },
       "source": [
-        "<h1>H_index</h1>\n",
+        "# H_index\n",
+        "---\n",
+        "Làm thế nào để đánh giá sự thành công của một nhà khoa học?  Dựa vào số bài báo được công bố hay dựa vào số lần một bài báo được trích dẫn tới ở công trình của những người khác? Cả hai tham số đó đều quan trọng.\n",
         "\n",
-        "* Abstraction: Cho n phần tử, tìm một số lớn nhất sao cho số đó phải nhỏ hơn hoặc bằng n và phải xuất hiện n lần hoặc hơn trong mảng\n",
+        "Một bài báo có điểm số trích dẫn là c nếu nó được trích dẫn tới c lần trong các công trình của những nhà khoa học khác. Một trong số các cách đánh giá sự thành công của một nhà khoa học là tính chỉ số ảnh hưởng H_Index dựa trên sự kết hợp giữa số lượng bài báo và chỉ số trích dẫn của các bài báo đó.\n",
         "\n",
-        "* Pattern Recognition: bảng băm\n",
-        "* Algorithm designed:\n",
+        "Chỉ số H_Indexcủa một nhà khoa học bằng k lớn nhất nếu người đó có k bài báo, mỗi bài có điểm số trích dẫn không nhỏ hơn k. Ví dụ, một người có 10 bài báo, mỗi bài báo được trích dẫn không dưới 10 lần thì H_Index của người đó ít nhất là bằng 10.\n",
         "\n",
+        "Một người có n bài báo, bài báo thứ i có điểm trích dẫn là ci, i = 1 ÷ n. Hãy xác định H_Index của người đó.\n",
+        "\n",
+        "Dữ liệu: Vào từ thiết bị nhập chuẩn:\n",
+        "\n",
+        "Dòng đầu tiên chứa một số nguyên n (1 ≤ n ≤ 5×105)\n",
+        "\n",
+        "Dòng thứ 2 chứa n số nguyên c1, c2, . . ., cn (0 ≤ ci ≤ 106, i = 1 ÷ n).\n",
+        "\n",
+        "Kết quả: Đưa ra thiết bị xuất chuẩn một số nguyên – H_Index tìm được.\n",
+        "\n",
+        "INPUT : 5 8 5 3 4 10\n",
+        "\n",
+        "OUTPUT : 4\n",
+        "## Abstraction\n",
+        "---\n",
+        " Cho n phần tử, tìm một số lớn nhất sao cho số đó phải nhỏ hơn hoặc bằng n và phải xuất hiện n lần hoặc hơn trong mảng\n",
+        "\n",
+        "# Pattern Recognition:\n",
+        "---\n",
+        "bảng băm\n",
+        "# Algorithm designed\n",
+        "---\n",
         "  * Tạo một mảng gồm n+1 phần tử chứa giá trị 0\n",
         "  * Lặp từng phần tử của mảng\n",
         "\t    * nếu phần tử lớn hơn n thì tăng giá trị của phần tử thứ n+1 lên 1\n",
@@ -49,7 +71,9 @@
         "  * Cộng dồn giá trị của mảng vừa được tính toán từ ngoài vào\n",
         "  * nếu giá trị  >= y thì hoàn tất \n",
         "  * còn không thì y=y-1\n",
-        "* Đánh giá độ phức tạp thuật toán:O(n)\n",
+        "# Đánh giá độ phức tạp thuật toán\n",
+        "---\n",
+        "Time complexity :O(n)\n",
         "\n"
       ]
     },
@@ -92,12 +116,28 @@
         "id": "QgWWQ8mmYGCl"
       },
       "source": [
-        "<h1>KHÓA SỐ</h1>\n",
+        "# KHÓA SỐ\n",
+        "---\n",
+        "Để tăng độ an toàn chống hiện tượng cướp ngân hàng ngày càng phổ biến người ta dùng khóa số với mã mở khóa đơn giản nhưng rất hiệu quả. Trên cửa ra vào hiển thị một xâu khá dài các ký tự số. Các chữ số có thể di chuyển đổi chổ cho nhau hoặc bị xóa. Muốn mở khóa người ta phải di chuyển các chữ số và trong trường hợp cần thiết – xóa vài chữ số để nhận được xâu lớn nhất thỏa mãn điều kiện đã cài đặt. Điều kiện này được thay đổi thường xuyên. Hôm nay điều kiện đó là “Số nhận được phải chia hết cho 3”. Số nhận được có thể bắt đầu bằng các chữ số 0. Xâu “000” sẽ lớn hơn xâu “00”.\n",
         "\n",
-        "* Abstraction:Cho một xâu, xuất ra một xâu lớn nhất và phải chia hết cho 3 ( có thể xóa phần tử trong xâu để có thể được chia hết cho 3)\n",
+        "Hãy xác định khóa mở cửa.\n",
         "\n",
-        "* Pattern Recognition:sắp xếp, tìm kiếm phần tử mảng\n",
-        "* Algorithm designed:\n",
+        "Dữ liệu: Vào từ thiết bị nhập chuẩn gồm một xâu ký tự số có độ dài lớn hơn 2 và không vượt quá 105.\n",
+        "\n",
+        "Kết quả: Đưa ra thiết bị xuất chuẩn xâu khóa mở cửa.\n",
+        "\n",
+        "    INPUT :105\n",
+        "\n",
+        "    OUTPUT:510\n",
+        "# Abstraction\n",
+        "---\n",
+        "Cho một xâu, xuất ra một xâu lớn nhất và phải chia hết cho 3 ( có thể xóa phần tử trong xâu để có thể được chia hết cho 3)\n",
+        "\n",
+        "# Pattern Recognition\n",
+        "---\n",
+        "sắp xếp, tìm kiếm phần tử mảng\n",
+        "# Algorithm designed\n",
+        "---\n",
         "  * Sắp xếp mảng từ lớn đến bé\n",
         "  * Nếu tổng của các phần tử mảng chia hết cho 3 thì xuất mảng \n",
         "  * Còn không thì \n",
@@ -111,7 +151,9 @@
         "\n",
         "  * Xóa phần tử mảng thứ A[0] và A[1]\n",
         "  * Xuất mảng\n",
-        "* Đánh giá độ phức tạp thuật toán:O(n)"
+        "# Đánh giá độ phức tạp thuật toán\n",
+        "---\n",
+        "Time complexity :O(n)"
       ]
     },
     {
