--- a/Thực hành/Tảo Biển & Trạm thu phí/CS112_L21_KHCL_N03_Week1.ipynb
+++ b/Thực hành/Tảo Biển & Trạm thu phí/CS112_L21_KHCL_N03_Week1.ipynb
@@ -6,7 +6,7 @@
       "name": "CS112_L21_KHCL_N03_Week1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOi+Se6TXnxPDe8kaayRjJ9",
+      "authorship_tag": "ABX9TyM44OHE9mnwyCPNWyA+XpLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,22 @@
       "source": [
         "# Tảo biển\n",
         "---\n",
+        "Tảo biển sinh sản rất nhanh khi có môi trường thuận lợi với chúng và có những loài còn tiết ra môi trường những chất độc hại.\n",
+        "\n",
+        "Một loại tảo nâu trong môi trường nước bị ô nhiễm nặng sinh sản theo quy luật sau:\n",
+        "\n",
+        "Ngày đầu tiên (ngày 0) có n cá thể ở mức 1,\n",
+        "Ở mỗi ngày tiếp theo, mỗi cá thể mức i sinh ra i cá thể mức 1, các cá thể mới sinh sẽ sinh sôi, phát triển từ ngày hôm sau.\n",
+        "Bản thân các cá thể mức i phát triển thành mức i+1 và chu kỳ phát triển trong ngày chấm dứt.\n",
+        "Hãy xác định sau k ngày trong nước biển có bao nhiêu cá thể.\n",
+        "\n",
+        "Dữ liệu: Vào từ thiết bị nhập chuẩn gồm một dòng chứa 2 số nguyên n và k (1 ≤ n ≤ 1000, 1 ≤ k ≤ 1017).\n",
+        "\n",
+        "Kết quả: Đưa ra thiết bị xuất chuẩn một số nguyên – số lượng cá thể  tảo theo mô đun $10^9+7$\n",
+        "\n",
+        "INPUT :3 2\n",
+        "\n",
+        "OUTPUT:15\n",
         "\n",
         "## Abstraction\n",
         "---\n",
@@ -43,7 +59,7 @@
         "\n",
         "## Pattern Recognition\n",
         "---\n",
-        "iteration\n",
+        "Quy hoạch động \n",
         "\n",
         "## Algorithm Design\n",
         "---\n",
@@ -106,7 +122,25 @@
       "source": [
         "# Trạm thu phí\n",
         "---\n",
+        "Đường cao tốc xuyên quốc gia được xây dựng theo hình thức BOT. Công ty Đa quốc gia Modern Highway trúng thầu, chia toàn bộ con đường thành n đoạn. Theo tính toán của Công ty sau khi chuyển giao con đường cho chính phủ sở tại quản lý thì lãi thu được ở đoạn đường thứ i là ai, ai có thể dương, âm hoặc bằng 0, tức là với từng đoạn con có thể lãi, lỗ hoặc hòa vốn. Từng nhóm các đoạn đường liên tiếp nhau (gọi tắt là khoảng) được chia cho các công ty con thực hiện. Công ty con ASEAM Highway hiện đang có trụ sở ở nước sở tại được quyền chọn trước khoảng tùy ý (có thể là cả con đường).\n",
         "\n",
+        "Dĩ nhiên Ban Giám đốc ASEAM Highway muốn chọn khoảng bắt đầu từ đoạn p đến hết đoạn q mang lại lợi nhuận cao nhất hoặc lỗ ít nhất nếu không có khoảng nào cho lãi.\n",
+        "\n",
+        "Hãy chỉ ra khoảng cần chọn và lãi thu được. Nếu có nhiều cách chọn thì chỉ ra cách chọn có p nhỏ nhất.\n",
+        "\n",
+        "Dữ liệu: Vào từ thiết bị nhập chuẩn:\n",
+        "\n",
+        "Dòng đầu tiên chứa số nguyên n (1 ≤ n ≤ 106)\n",
+        "\n",
+        "Dòng thứ 2 chứa n số nguyên a1, a2, . . ., an (0 ≤ |ai| ≤ 109, i = 1 ÷ n).\n",
+        "\n",
+        "Kết quả: Đưa ra thiết bị xuất chuẩn trên một dòng 2 số nguyên p, q và lãi thu được.\n",
+        "\n",
+        "INPUT : 16\n",
+        "\n",
+        "2 -4 5 -8 4 -1 -1 1 1 1 -2 2 4 -6 9 -4\n",
+        "\n",
+        "OUTPUT : 5 15 12\n",
         "## Abstraction\n",
         "---\n",
         "Cho 1 mảng, hãy tìm phần tử thứ a và b sao cho tổng của những phần tử giữa chúng có giá trị lớn nhất \n",
