--- a/Homework/LuyệnTập_Nhóm11/CS112_KHCL_N03_Week9.ipynb
+++ b/Homework/LuyệnTập_Nhóm11/CS112_KHCL_N03_Week9.ipynb
@@ -71,7 +71,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LNfgdQawc9M1"
+        "id": "LNfgdQawc9M1",
+        "outputId": "7c98ac28-a1ac-4835-bc00-b3ad61f0f968",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "\n",
@@ -111,38 +115,41 @@
         "    print(cache[n])\n",
         "    temp = n\n",
         "    s=''\n",
-        "    mem=''\n",
-        "    flag = False\n",
-        "    while(flag == False):\n",
-        "        ToAppend=''\n",
-        "        if temp < 0:\n",
-        "            ToAppend=str(-temp)\n",
+        "    while temp!=0:\n",
+        "        if trace[temp] < 0 :\n",
+        "            s=s+str(-temp)+' '\n",
         "        else:\n",
-        "            ToAppend=str(trace[temp])\n",
-        "        if mem == ToAppend :\n",
-        "            flag = True\n",
-        "            continue\n",
-        "        s=s+ToAppend+' '\n",
-        "        mem=ToAppend\n",
-        "        temp=abs(trace[temp]-1)\n",
+        "            s=s+str(trace[temp])+' '\n",
+        "        temp=abs(trace[temp])-1\n",
         "    print(s)\n",
         "\n",
         "\n",
         "n = int(input())\n",
         "input_string = input()\n",
         "List=input_string.split()\n",
-        "List1=[0]*20\n",
+        "List1=[0]*3950041\n",
         "for i in range(1,len(List)+1):\n",
         "    List1[i] = int(List[i-1])%1000000007\n",
-        "L = [0]*20\n",
-        "R = [0]*20\n",
-        "cache = [0]*20\n",
-        "trace = [0]*20\n",
+        "L = [0]*3950041\n",
+        "R = [0]*3950041\n",
+        "cache = [0]*3950041\n",
+        "trace = [0]*3950041\n",
         "initialize(L,R,n,List1)\n",
         "solve(L,R,n,cache,trace)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "5 1 1 1 1\n",
+            "1\n",
+            "1 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
